<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catalog CNER</string>
    <string name="title_elev_detail">Detaliu elev</string>
    <string name="title_elev_list">Elevi</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="menu_insert">Adaugă notiță</string>
    <string name="menu_revert">Revin-o</string>
    <string name="menu_discard">Renunță</string>
    <string name="title_create">Creează notiță</string>
    <string name="title_edit">Editează notița</string>
    <string name="title_notes_list">Notițe</string>
    <string name="title_note">Notiță</string>
    <string name="title_edit_title">Titlul notiței:</string>
    <string name="live_folder_name">Notițe</string>
    <string name="button_ok">OK</string>
    <string name="error_title">Eroare</string>
    <string name="error_message">Eroare în timpul încărcării notiței</string>
    <string name="adauga_materie">Adaugă Materie</string>
    <string name="materie">Materie</string>
    <string name="clasa">Clasa:</string>
    <string name="ziua">Ziua:</string>
    <string name="de_la_ora">De la ora:</string>
    <string name="delimiter">--:--</string>
    <string name="pana_la">"Până la: "</string>
    <string name="nota">Nota:</string>
    <string name="nota_et">-</string>
    <string name="note">Note:</string>
    <string name="absente">Absențe:</string>
    <string name="salveaza">Salvează</string>
    <string name="anuleaza">Anulează</string>
    <string name="introduceti_clasa">Introduceți Clasa</string>
    <string name="introduceti_materia">Introduceți Materia</string>
    <string name="profesor">Profesor:</string>
    <string name="adauga">Adaugă</string>
    <string name="adauga_ora">Adaugă Ora</string>
    <string name="pune_absent">Pune Absent</string>
    <string name="optiuni">Opțiuni</string>
    <string name="editeaza">Editează</string>
    <string name="sterge">Șterge</string>
    <string name="editeaza_note_sau_absente">Editează note sau absențe</string>
    <string name="introduceti_numele_profesorului">Introduceți numele profesorului</string>
    <string name="menu_add">Notiță nouă</string>
    <string name="menu_save">Salvează</string>
    <string name="menu_delete">Șterge</string>
    <string name="menu_open">Deschide</string>
    <string name="menu_copy">Copiază</string>
    <string name="menu_paste">Lipește</string>
    <string name="text_title">Titlu:</string>
    <string name="resolve_edit">Editează notița</string>
    <string name="resolve_title">Editează titlu</string>
    <string name="nothing_to_save">Nu există nimic de salvat!</string>
    <string name="avarage">Media generală: </string>
    <string name="start_comp">Start -- Computerul joacă primul</string>
    <string name="start_player">Start -- Jucătorul joacă primul</string>
    <string name="welcome"><b>Bun venit la un simplu joc de x-0!</b></string>
    <string name="player2_win">Jucătorul 2 (computerul) a câștigat!</string>
    <string name="player1_win">Jucătorul 1 (tu) ai câștigat!</string>
    <string name="tie">Meciul a fost o remiză! Nimeni nu a câștigat!</string>
    <string name="player2_turn">E rândul jucătorului cu numărul 2 (computerul)</string>
    <string name="player1_turn">E rândul tău!</string>
    <string name="done">Următorul!</string>
    <string name="back">Înapoi</string>
    <string name="final_grade">Nota la teză</string>
    <string name="avarage_grade">Media</string>
    <string name="not_classMaster">Nu sunteți diriginte!</string>
    <string name="details_class">Detalii Clasă</string>
    <string name="add_grades">Adaugă note</string>
    <string name="note_added">Nota a fost adăugată!</string>
    <string name="notes_added">Notele au fost adăugate!</string>
    <string name="interval_motivated">Absențele au fost motivate!</string>
    <string name="interval_not_motivated">Eroare! Absențele NU au fost motivate!</string>
    <string name="situation_already_closed">Avertisment! Situația a fost deja încheiată.</string>
    <string name="situation_closed">Situația a fost încheiată.</string>
    <string name="situation_not_closed">Eroare! Situația nu a fost încheiată.</string>
    <string name="note_not_added">Eroare! Nota nu a fost adăugată!</string>
    <string name="absance_added">Absența a fost adăugată!</string>
    <string name="absance_not_added">Eroare! Absența nu a fost adăugată!</string>
    <string name="insert_valid_grade">Vă rugăm să inserați o notă validă!</string>
    <string name="invalid_date_interval">Intervalul nu este unul valid!</string>
    <string name="final_mark">Teza</string>
    <string name="changes_made">Schimbările au fost făcute!</string>
    <string name="changes_not_made">Eroare! Schimbările nu au fost făcute.</string>
    <string name="new_password">Parolă nouă:</string>
    <string name="missmatch_password">Parolele nu coincid!</string>
    <string name="confirm_pass">Confirmare Parolă:</string>
    <string name="change_password">Schimbare Parolă</string>
    <string name="logout">Ieșire cont</string>
    <string name="password_changed">Parola a fost schimbată cu succes!</string>
    <string name="password_not_changed">Eroare! Parola nu a fost schimbată!</string>
    <string name="coming_soon">În construcții :)</string>
    <string name="no_subject_entries">Nu aveți asignate materii.</string>
    <string name="choose_your_location">Alegeți locația dumneavoastră</string>
    <string name="dialog_title_close_situation">Încheie Situația</string>
    <string name="yes">Da</string>
    <string name="work_from_home">Lucrați de acasă?</string>
    <string name="dialog_question_close_situation">Sunteți siguri că doriți să încheiați situația?</string>
    <string name="no">Nu</string>
    <string name="menu_about">Despre Aplicație</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="financed_project">Proiectul a fost \nfinanțat de: </string>
    <string name="started_by">Proiectul a fost \nconceput de: </string>
    <string name="app_title">Catalog Online</string>
    <string name="bad_connection">Eroare de conexiune! Vă rugăm verificați că sunteți conectați la internet.</string>
    <string name="sem_i">Sem. I</string>
    <string name="sem_ii">Sem. II</string>
    <string name="motivare_interval">Motivare Interval</string>
    <string name="incheie_situatia">Încheie Situația</string>
    <string name="motiveaza">Motivează</string>
    <string name="de_la_data_">De la data:</string>
    <string name="de_la_data">De la data:</string>
    <string name="eroare_va_rugam_sa_incercati_din_nou">Eroare! Vă rugăm să încercați din nou.</string>

</resources>