<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/labelSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/materie" />

        <Spinner
            android:id="@+id/SName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelSubject" />

        <TextView
            android:id="@+id/labelClassroom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/SName"
            android:text="@string/clasa" />

        <EditText
            android:id="@+id/classroomEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelClassroom"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/introduceti_clasa" />

        <TextView
            android:id="@+id/labelDay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/classroomEdit"
            android:text="@string/ziua" />

        <Spinner
            android:id="@+id/day"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelDay" />

        <Button
            android:id="@+id/buttonFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/day"
            android:minWidth="50dip"
            android:text="@string/de_la_ora" />

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/buttonFrom"
            android:layout_toRightOf="@id/buttonFrom"
            android:text="@string/delimiter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/buttonTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/start"
            android:layout_toRightOf="@id/start"
            android:minWidth="50dip"
            android:text="@string/pana_la" />

        <TextView
            android:id="@+id/end"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/buttonTo"
            android:layout_toRightOf="@id/buttonTo"
            android:text="@string/delimiter"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/end"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ok"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_ok" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/anuleaza" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>