<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/tvFirstDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/de_la_data" >
        </TextView>

        <Button
            android:id="@+id/btnFirstDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tvFirstDate"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tvSecondDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/btnFirstDate"
            android:text="@string/pana_la" >
        </TextView>

        <Button
            android:id="@+id/btnSecondDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/tvSecondDate"
            android:background="@android:color/transparent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout_top"
        android:layout_marginTop="40dp"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/btnMotivateInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_blue"
            android:padding="5dp"
            android:text="@string/motiveaza"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>