<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:id="@+id/layout_top_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/btn_selectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_top_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_top_1"
            android:layout_centerHorizontal="true" >

            <EditText
                android:id="@+id/et_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ems="3"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingLeft="30dp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tv_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/et_grade"
                android:text="@string/nota"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/btn_addGrade"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/et_grade"
                android:background="@drawable/btn_blue"
                android:text="@string/adauga"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbFinalMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/et_grade"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/btn_addGrade"
                android:text="@string/final_mark" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout_top"
        android:layout_marginTop="40dp"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/addAbsentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_red"
            android:padding="5dp"
            android:text="@string/pune_absent"
            android:textColor="@color/btn_text"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>